--- a/.github/workflows/mac-build.yml
+++ b/.github/workflows/mac-build.yml
@@ -66,7 +66,7 @@ jobs:
           - 'mem'
         options:
           - '--enable-aqua'
-#          - '--disable-aqua'
+          - '--disable-aqua'
     defaults:
       run:
         shell: bash
