--- a/.github/workflows/mac-build.yml
+++ b/.github/workflows/mac-build.yml
@@ -6,6 +6,7 @@ on:
     - "core-8-branch"
     - "core-8-6-branch"
     - "revised_text"
+    - "bug-1871581951"
     tags:
     - "core-**"
 permissions:
