--- a/unix/Makefile.in
+++ b/unix/Makefile.in
@@ -373,7 +373,7 @@ TEXT_OBJS = tkText.o tkTextBTree.o tkTextDisp.o tkTextImage.o tkTextIndex.o \
 #
 FONT_OBJS = @UNIX_FONT_OBJS@
 
-GENERIC_OBJS = tk3d.o tkArgv.o tkAtom.o tkBind.o tkBitmap.o tkBusy.o \
+GENERIC_OBJS = tk3d.o tkAccessibility.o tkArgv.o tkAtom.o tkBind.o tkBitmap.o tkBusy.o \
 	tkClipboard.o \
 	tkCmds.o tkColor.o tkConfig.o tkConsole.o tkCursor.o tkError.o \
 	tkEvent.o tkFocus.o tkFont.o tkGet.o tkGC.o tkGeometry.o tkGrab.o \
@@ -428,7 +428,7 @@ TTK_DECLS = \
 	$(TTK_DIR)/ttk.decls
 
 GENERIC_SRCS = \
-	$(GENERIC_DIR)/tk3d.c $(GENERIC_DIR)/tkArgv.c \
+	$(GENERIC_DIR)/tk3d.c $(GENERIC_DIR)/tkAccessibility.c $(GENERIC_DIR)/tkArgv.c \
 	$(GENERIC_DIR)/tkAtom.c $(GENERIC_DIR)/tkBind.c	\
 	$(GENERIC_DIR)/tkBitmap.c $(GENERIC_DIR)/tkBusy.c \
 	$(GENERIC_DIR)/tkClipboard.c \
@@ -1024,6 +1024,10 @@ tkAppInit.o: $(UNIX_DIR)/tkAppInit.c
 
 tk3d.o: $(GENERIC_DIR)/tk3d.c
 	$(CC) -c $(CC_SWITCHES) $(GENERIC_DIR)/tk3d.c
+
+tkAccessibility.o: $(GENERIC_DIR)/tkAccessibility.c
+	$(CC) -c $(CC_SWITCHES) $(GENERIC_DIR)/tkAccessibility.c
+
 
 tkArgv.o: $(GENERIC_DIR)/tkArgv.c
 	$(CC) -c $(CC_SWITCHES) $(GENERIC_DIR)/tkArgv.c
